ChatParserTest.